--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -28,9 +28,7 @@
     "eslint-plugin-vue": "^8.0.3",
     "less-loader": "^12.2.0",
     "sass": "^1.77.4",
-    "sass-loader": "^14.2.1",
-    "unplugin-auto-import": "^0.17.6",
-    "unplugin-vue-components": "^0.27.0"
+    "sass-loader": "^14.2.1"
   },
   "eslintConfig": {
     "root": true,
